[gd_scene load_steps=10 format=3 uid="uid://dim43fpd44ss5"]

[ext_resource type="Script" uid="uid://c4cjsis5fu7oq" path="res://Scripts/Monsters/bat.gd" id="1_nanwo"]
[ext_resource type="Texture2D" uid="uid://bjxe4jnfleq16" path="res://Assets/kenney_pixel-platformer/Tiles/Characters/tile_0024.png" id="2_rkae7"]
[ext_resource type="Texture2D" uid="uid://cm75n67mvqk8h" path="res://Assets/kenney_pixel-platformer/Tiles/Characters/tile_0025.png" id="3_11533"]
[ext_resource type="AudioStream" uid="uid://brgdfh2lxqiio" path="res://Assets/audio/kill-enemy.ogg" id="4_2uwsu"]
[ext_resource type="Texture2D" uid="uid://f6vc20d13hbw" path="res://Assets/kenney_pixel-platformer/Tiles/Characters/tile_0026.png" id="4_27n3v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fa6o1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rkae7")
}, {
"duration": 1.0,
"texture": ExtResource("3_11533")
}, {
"duration": 1.0,
"texture": ExtResource("4_27n3v")
}, {
"duration": 1.0,
"texture": ExtResource("3_11533")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_74gxv"]
radius = 7.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0udku"]
size = Vector2(16, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xu6ci"]
size = Vector2(16, 9)

[node name="Bat" type="CharacterBody2D"]
script = ExtResource("1_nanwo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fa6o1")
animation = &"Run"
autoplay = "Run"
frame_progress = 0.430907

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_74gxv")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="FloorCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 10)

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2uwsu")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="Hurtbox" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_0udku")
debug_color = Color(1, 1, 0, 0)

[node name="Hitbox" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_xu6ci")
debug_color = Color(1, 0, 0, 0)

[connection signal="finished" from="Death" to="." method="_on_death_finished"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
